--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,7 @@ body,html{
     scroll-behavior: smooth;
     font-family: 'Barlow Condensed','Yanone Kaffeesatz',sans-serif;
     color: #fff;
+    width: 100vw;
 }
 .container{
     padding: 0 10%;
